--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
   <header>
     <div class="site-name">Orbit Plotter</div>
     <nav>
-      <a href="#">Documentation</a>
-      <a href="#">Learn</a>
-      <a href="#">Resources</a>
+      <a href="index.html">Plotting</a>
+      <a href="documentation.html">Documentation</a>
+      <a href="documentation.html">Learn</a>
+      <a href="resources.html">Resources</a>
     </nav>
   </header>
 
@@ -65,7 +66,7 @@
   </main>
 
   <footer>
-    <p>Made By: Josh Taylor, Zack Fraser</p>
+    <p>Made By: Josh Taylor and Zack Fraser</p>
     <p>Contact Us: orbitplotter@gmail.com</p>
   </footer>
 
@@ -78,4 +79,3 @@
   <script src="errors.js"></script>
 </body>
 </html>
-
