Revamp resources.html with new content and layout
The updated resources.html file includes a new layout with a table of contents and additional resources for learning about orbital mechanics.

--- a/resources.html
+++ b/resources.html
@@ -6,16 +6,80 @@
   <title>Resources</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
-<body>
+<body class = "learning-page">
   <header>
     <div class="site-name">Resources</div>
     <nav>
       <a href="index.html">Plotting</a>
-      <a href="documentation.html">Documentation</a>
-      <a href="documentation.html">Learn</a>
+      <a href="learning.html">Learning</a>
       <a href="resources.html">Resources</a>
     </nav>
   </header>
+
+  <main class="layout">
+    <div class="table-of-contents">
+      <h2>Table of Contents</h2>
+      <ul>
+        <li><a href="learning.html">Introduction</a></li>
+        <li><a href="two-body.html">Two Body</a></li>
+        <li><a href="cr3bp.html">CR3BP</a></li>
+        <li><a href="relative-motion.html">Relative Motion</a></li>
+        <li><a href="examples.html">Examples</a></li>
+        <li><a href="resources.html">Resources</a></li>
+      </ul>
+    </div>
+
+    <div class = "reading-body">
+      <h1>Resources</h1>
+      <p>
+        This page includes a list of resources that were used to help create this website. 
+        All equations and information on the presented subjects can be found within several of these resources.
+        If you want to learn more about orbital mechanics within a deeper level, please access these resources and more.
+      </p>
+      <h2>Textbooks</h2>
+      <ul>
+        <li>Curtis, H. D. (2014). Orbital mechanics for engineering students (Third ed.). Butterworth-Heinemann.</li>
+        <p>
+          This textbook focuses on building the basics of orbital mechanics for engineering students. It includes topics such as two-body orbits, orbital maneuvers, and interplanetary trajectories.
+        </p>
+        <li>Bate, R. R., Mueller, D. D., White, J. E., & Saylor, W. W. (2020). Fundamentals of astrodynamics. Courier Dover Publications.</li>
+        <p>
+          This textbook covers the deeper fundamentals of orbital mechanics, building off the basics. It includes topics such as relative motion, three-body orbits, and orbital perturbations.
+        </p>
+        <li>Vallado, D. A. (2013). Fundamentals of Astrodynamics and Applications (Fourth ed.). Microcosm Press.</li>
+        <p>
+          This resource is an older textbook about astrodynamics. It is structured for teaching college-level students the basics and applications of orbital mechanics.
+        </p>
+      </ul>
+      <h2>Online</h2>
+      <ul>
+        <li>Weber, B. (2023). Intro. Orbital Mechanics & Astrodynamics. <a href = "https://orbital-mechanics.space/intro.html">https://orbital-mechanics.space/intro.html</a> </li>
+        <p>
+          This website provides college-level information about two-body and three-body orbits. This website includes equations and code for students to utilize and understand.
+        </p>
+        <li>Battin, R. (2008). Astrodynamics. MIT OpenCourseWare. <a href = "https://ocw.mit.edu/courses/16-346-astrodynamics-fall-2008/pages/lecture-notes/">https://ocw.mit.edu/courses/16-346-astrodynamics-fall-2008/pages/lecture-notes/</a> </li>
+        <p>
+          This is a series of lectures provided by MIT OpenCourseWare that is open to the public. It includes topics such as the two-body problem, spacecraft transfers, and J2 perterbations.
+        </p>
+        <li>NASA Jet Propulsion Laboratory. (2021). Three-Body Periodic Orbits. NASA. <a href = "https://ssd.jpl.nasa.gov/tools/periodic_orbits.html">https://ssd.jpl.nasa.gov/tools/periodic_orbits.html</a> </li>
+        <p>
+          This website was created to show the different common three-body orbits around different celestial bodies through plotting and mathematical equations. It is possible to export these plots for external use.
+        </p>
+        <li>Bolles, D. (2023). What is an orbit?. NASA Space Place. <a href = "https://spaceplace.nasa.gov/orbits/en/">https://spaceplace.nasa.gov/orbits/en/</a></li>
+        <p>
+          This website is a good resource for teachers looking to teach children the basics about orbits. It includes simple explanations and activities to engage a younger audience to learn about space.
+        </p>
+        <li>Candey, R. (2025). SSC - 4D orbit viewer: Interactive 3D spacecraft trajectories by SPDF. NASA SPDF. <a href = "https://sscweb.gsfc.nasa.gov/4dorbit/">https://sscweb.gsfc.nasa.gov/4dorbit/</a></li>
+        <p>
+          This browser-based tool allows people to visualize predetermined orbits of several spacecraft and planets in a 3D viewer. The viewer allows for saved interactions that can be shared or used for presentations.
+        </p>
+        <li>Park, R. (2021). Orbit Viewer. NASA Jet Propulsion Laboratory. <a href = "https://ssd.jpl.nasa.gov/tools/orbit_viewer.html">https://ssd.jpl.nasa.gov/tools/orbit_viewer.html</a></li>
+        <p>
+          This online tool is a resource for people to show how different spacecraft orbit the solar system through a heliocentric view. The tool requires a spacecraft ID to show how it orbits around the sun.
+        </p>
+      </ul>
+    </div>
+  </main>
 
   <footer>
     <p>Made By: Josh Taylor and Zack Fraser</p>
