Fix navigation links in index.html

--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
     <div class="site-name">Orbit Plotter</div>
     <nav>
       <a href="index.html">Plotting</a>
-      <a href="documentation.html">Documentation</a>
-      <a href="documentation.html">Learn</a>
+      <a href="learning.html">Learning</a>
       <a href="resources.html">Resources</a>
     </nav>
   </header>
@@ -134,3 +133,4 @@
   </script>
 </body>
 </html>
+
