--- a/cr3bp.html
+++ b/cr3bp.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>CR3BP</title>
+  <title>Three-Body</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body class = "learning-page">
@@ -22,7 +22,7 @@
       <ul>
         <li><a href="learning.html">Introduction</a></li>
         <li><a href="two-body.html">Two Body</a></li>
-        <li><a href="cr3bp.html">CR3BP</a></li>
+        <li><a href="cr3bp.html">Three-Body</a></li>
         <li><a href="relative-motion.html">Relative Motion</a></li>
         <li><a href="examples.html">Examples</a></li>
         <li><a href="resources.html">Resources</a></li>
@@ -40,4 +40,5 @@
   </footer>
 
 </body>
+
 </html>
