--- a/resources.html
+++ b/resources.html
@@ -22,7 +22,7 @@
       <ul>
         <li><a href="learning.html">Introduction</a></li>
         <li><a href="two-body.html">Two Body</a></li>
-        <li><a href="cr3bp.html">CR3BP</a></li>
+        <li><a href="cr3bp.html">Three-Body</a></li>
         <li><a href="relative-motion.html">Relative Motion</a></li>
         <li><a href="examples.html">Examples</a></li>
         <li><a href="resources.html">Resources</a></li>
@@ -88,3 +88,4 @@
 
 </body>
 </html>
+
