--- a/relative-motion.html
+++ b/relative-motion.html
@@ -31,6 +31,26 @@
 
     <div class = "reading-body">
       <h1>Relative Motion</h1>
+      <p>
+        Relative motion, unlike inertial motion, is viewed through a moving frame. This allows an observer to see how an object is moving relative to a central object. This type of frame can be described using two cars on a highway. From a distance (or from an inertial frame), both cars look like they are moving past the viewing point. When viewed from the perspective of the “main” car (or from relative motion), the other car will move dependent on the “main” car. If both cars move at the same speed, the other car will look like it is not moving. If the “main” car is slightly faster, then the other car will look like it is falling behind. If the “main” car is slightly slower, then the other car will look like it is racing ahead.
+      </p>
+      <p>
+        This type of motion is useful as it describes how several satellites interact with each other while in orbit. While two-body and three-body orbits focus with a celestial body point of view, relative motion fixes the view on a central satellite. This satellite is called the “Chief” or “Target” satellite, which is like the “main” car in the example. Satellites that orbit around the chief satellite are called “Interceptor” satellites, which is like the other car in the example. For this website plotter, relative motion in the two-body orbit is used.
+      </p>
+      <p>
+        Relative motion is useful for satellite formations as it shows where each satellite is relative to each other. One example of satellite formation is the Global Position System (GPS), formations are necessary for this system so that there is constant communication with navigation devices on Earth. If not every part of the Earth can reach a satellite, then GPS would not work properly. Thus, the formation needs to be properly managed while in orbit. Viewing the satellites in relative motion allows a person to easily understand where each satellite is and how they need to be properly managed to keep the formation.
+      </p>
+      <h2>Relative Motion Frame</h2>
+      <p>
+        When analyzing satellites while in the relative motion frame, it is important to understand where the frame is located. There are several names for the relative motion frame, with the two of the most common being the RIC, RSW, LVLH frames. RIC stands for Radial, In-track, and Cross-track. RIC refers to the different directions that a spacecraft is pointing while in orbit. The radial direction comes from drawing a line from the center of the orbit to the spacecraft and continues outward. The in-track direction comes from the forward direction of the spacecraft. The cross-track direction is created from the cross product of the radial and in-track directions. RSW is the same as RIC but uses SW in place of IC for calculation purposes. LVLH stands for Local Vertical and Local Horizontal. It shows the same directions as the RIC setup but calls the radial direction as local vertical and the in-track direction as local horizontal. The following figure shows the chief satellite frame with the RSW naming scheme.
+      </p>
+      <figure>
+        <img src= = "RSW_frame.png" alt = "RSW Frame">
+        <figcaption><b>Fig. 1</b> The RSW Frame for Relative Motion. Image Accredited to Kim, Eunhyouek & Han, Seungyeop & Sayegh, Amer. (2019). Sensitivity of the Gravity Model and Orbital Frame for On-board Real-Time Orbit Determination: Operational Results of GPS-12 GPS Receiver. Remote Sensing. 11. 1542. 10.3390/rs11131542.</figcaption>
+      </figure>figure>
+      <p>
+        Within the RIC frame, the chief satellite is located at the coordinates (0, 0, 0).
+      </p>
     </div>
   </main>
 
@@ -42,3 +62,4 @@
 </body>
 
 </html>
+
