--- a/relative-motion.html
+++ b/relative-motion.html
@@ -45,7 +45,7 @@
         When analyzing satellites while in the relative motion frame, it is important to understand where the frame is located. There are several names for the relative motion frame, with the two of the most common being the RIC, RSW, LVLH frames. RIC stands for Radial, In-track, and Cross-track. RIC refers to the different directions that a spacecraft is pointing while in orbit. The radial direction comes from drawing a line from the center of the orbit to the spacecraft and continues outward. The in-track direction comes from the forward direction of the spacecraft. The cross-track direction is created from the cross product of the radial and in-track directions. RSW is the same as RIC but uses SW in place of IC for calculation purposes. LVLH stands for Local Vertical and Local Horizontal. It shows the same directions as the RIC setup but calls the radial direction as local vertical and the in-track direction as local horizontal. The following figure shows the chief satellite frame with the RSW naming scheme.
       </p>
       <figure>
-        <img src= = "RSW_frame.png" alt = "RSW Frame">
+        <img src="RSW_frame.png" alt="RSW Frame">
         <figcaption><b>Fig. 1</b> The RSW Frame for Relative Motion. Image Accredited to Kim, Eunhyouek & Han, Seungyeop & Sayegh, Amer. (2019). Sensitivity of the Gravity Model and Orbital Frame for On-board Real-Time Orbit Determination: Operational Results of GPS-12 GPS Receiver. Remote Sensing. 11. 1542. 10.3390/rs11131542.</figcaption>
       </figure>figure>
       <p>
@@ -62,4 +62,5 @@
 </body>
 
 </html>
+
 
