--- a/relative-motion.html
+++ b/relative-motion.html
@@ -47,7 +47,7 @@
       <figure>
         <img src="RSW_frame.png" alt="RSW Frame">
         <figcaption><b>Fig. 1</b> The RSW Frame for Relative Motion. Image Accredited to Kim, Eunhyouek & Han, Seungyeop & Sayegh, Amer. (2019). Sensitivity of the Gravity Model and Orbital Frame for On-board Real-Time Orbit Determination: Operational Results of GPS-12 GPS Receiver. Remote Sensing. 11. 1542. 10.3390/rs11131542.</figcaption>
-      </figure>figure>
+      </figure>
       <p>
         Within the RIC frame, the chief satellite is located at the coordinates (0, 0, 0).
       </p>
@@ -62,5 +62,6 @@
 </body>
 
 </html>
+
 
 
